--- a/config/locales/forms/fr.yml
+++ b/config/locales/forms/fr.yml
@@ -83,4 +83,4 @@ fr:
       name: Code de confirmation
       submit: Confirmer le compte
       title: Confirmez votre compte
-    select: '- Sélectionner -'
+    select: "- Sélectionner -"
