--- a/config/locales/devise/en.yml
+++ b/config/locales/devise/en.yml
@@ -111,7 +111,8 @@ en:
       max_personal_key_login_attempts_reached: Your account is temporarily locked
         because you have entered the personal key incorrectly too many times.
       otp_delivery_preference:
-        instruction: You can change this selection the next time you log in.
+        instruction: You can change this selection the next time you log in. If you
+          entered a landline, please select "Phone call" below.
         phone_unsupported: We're unable to make phone calls to people in %{location}
           at this time. We have sent your security code via text message. If you don't
           receive the message in a few minutes, click "get another text message" to
