--- a/config/locales/idv/es.yml
+++ b/config/locales/idv/es.yml
@@ -93,9 +93,9 @@ es:
         no_id: No tengo una identificación emitida por el estado
         profile: Para acceder a su cuenta en el futuro, puede %{link}.
         profile_link: mira tu cuenta aquí
-        sp_support: Visita [%{link}] para obtener más información.
+        sp_support: Visita %{link} para obtener más información.
         unsupported_jurisdiction: Estamos trabajando duro para agregar más estados
-          y esperamos apoyar a [%{state}] pronto.
+          y esperamos apoyar a %{state} pronto.
       loading: NOT TRANSLATED YET
       mail_sent: Su carta está en camino
       otp_delivery_method:
