--- a/config/locales/devise/en.yml
+++ b/config/locales/devise/en.yml
@@ -114,10 +114,7 @@ en:
         instruction: You can change this selection the next time you log in. If you
           entered a landline, please select "Phone call" below.
         phone_unsupported: We're unable to make phone calls to people in %{location}
-          at this time. We have sent your security code via text message. If you don't
-          receive the message in a few minutes, click "get another text message" to
-          try again. If that doesn't work, check that your phone or cellular operator
-          is not blocking messages from US phone numbers.
+          at this time.
         sms: Text message (SMS)
         title: How should we send you a code?
         voice: Phone call
