--- a/config/locales/idv/fr.yml
+++ b/config/locales/idv/fr.yml
@@ -146,7 +146,7 @@ fr:
         review_message: Lorsque vous entrez votre mot de passe, login.gov sécurise
           vos informations personnelles. Nous faisons cela pour nous assurer que personne
           d'autre ne puisse accéder à vos informations.
-        success: Nous avons trouvé des données qui correspondent à %{pii_message}
+        success: Ensuite, nous aurons besoin d'un numéro de téléphone.
       state_id_accordion_header: Que faire si je n'ai pas de numéro d'identification
         valide?
       state_id_accordion_message: "Vous devez fournir un numéro d'identification valide
@@ -220,6 +220,7 @@ fr:
       session:
         phone: Obtenez un code par téléphone
         review: Encryptez vos données personnelles en entrant votre mot de passe
+        session: Nous avons vérifié les informations sur votre ID d'état.
       sessions: Vérifier votre identité
       unsupported_jurisdiction: Nous ne sommes pas en mesure de vérifier les identités
         à l'aide d'identifiants provenant de %{state}
