--- a/config/locales/idv/fr.yml
+++ b/config/locales/idv/fr.yml
@@ -40,8 +40,8 @@ fr:
         compte.
     form:
       activate_by_mail: obtenez un code par lettre.
-      address1: Adresse 1
-      address2: Adresse 2 (optional)
+      address1: Adresse
+      address2: Adresse (optional)
       city: Ville
       dob: Date de naissance
       dob_hint: 'exemple : 01/17/1964'
@@ -49,18 +49,15 @@ fr:
       last_name: Nom de famille
       no_alternate_phone_html: Si vous n'avez pas d'autre numéro de téléphone, %{link}
       password: Mot de passe
-      personal_details: Information personnelle
       phone: Numéro de téléphone
       phone_label_aside: Ligne mobile ou fixe
-      previous_address_add: Inscrire votre adresse précédente
-      previous_address_html: Avez-vous déménagé au cours des strong3 derniers mois/strong?
-      ssn_label_html: Numéro de sécurité sociale %{tooltip}
+      ssn_label_html: Numéro de sécurité sociale
       state: État
-      state_id: NOT TRANSLATED YET
+      state_id: Numéro d'identification
       state_id_type:
         drivers_license: NOT TRANSLATED YET
         drivers_permit: NOT TRANSLATED YET
-        state_id_card: NOT TRANSLATED YET
+        state_id_card: Identification d'état
       state_id_type_label: Type de numéro d'identification
       zipcode: Code ZIP
     index:
@@ -88,9 +85,6 @@ fr:
       hardfail4_html: NOT TRANSLATED YET
       help_center_html: Visitez notre <strong>Centre d'aide</strong> pour en apprendre
         davantage sur la façon dont nous vérifions votre compte.
-      id_number: Entrez un numéro d'identification d'état ou un numéro de permis de
-        conduire valide. Le nom, la date de naissance et l'adresse de votre ID <strong>doivent</strong>
-        correspondent les informations fournies ci-dessus.
       jurisdiction:
         why: Pour vérifier votre identité, vous aurez besoin d'informations provenant
           de votre carte d'identité officielle.
@@ -138,8 +132,8 @@ fr:
         à l'identité, votre profil ne sera pas activé tant que vous n'aurez pas entré
         votre code de confirmation.
       sessions:
-        access_sp: "<strong>%{sp_name}</strong> ne nécessite que <em>que vous</em>
-          accéder à vos avantages."
+        id_information_subtitle: Informations d'identification
+        id_information_message: tel qu'il apparaît sur votre carte d'identité officielle
         no_pii: N'utilisez pas de véritables données personnelles (il s'agit d'une
           démonstration seulement)
         pii: Information personnelle
@@ -147,16 +141,6 @@ fr:
           vos informations personnelles. Nous faisons cela pour nous assurer que personne
           d'autre ne puisse accéder à vos informations.
         success: Nous avons trouvé des données qui correspondent à %{pii_message}
-      state_id_accordion_header: Que faire si je n'ai pas de numéro d'identification
-        valide?
-      state_id_accordion_message: "Vous devez fournir un numéro d'identification valide
-        pour continuer à vérifier en ligne. \nIl ne peut pas être expiré. Le nom,
-        la date de naissance et l'adresse de votre pièce \nd'identité doivent correspondre
-        aux informations que vous avez fournies ci-dessus.\n\nSi vous avez récemment
-        déménagé et que l'adresse figurant sur votre carte d'identité \nne correspond
-        pas à votre adresse officielle actuelle, nous ne pouvons pas vous \nconfirmer
-        en ligne pour le moment.\n\nSi vous n'avez pas de numéro d'identification
-        valide, retournez à %{sp} pour accéder \nà vos avantages."
       usps:
         bad_address: Je ne peux pas recevoir de courrier à cette adresse
         byline: Nous posterons une lettre à l'adresse vérifiée dans nos dossiers.
@@ -220,6 +204,6 @@ fr:
       session:
         phone: Obtenez un code par téléphone
         review: Encryptez vos données personnelles en entrant votre mot de passe
-      sessions: Vérifier votre identité
+      sessions: Informations sur vous
       unsupported_jurisdiction: Nous ne sommes pas en mesure de vérifier les identités
         à l'aide d'identifiants provenant de %{state}
