--- a/config/locales/idv/es.yml
+++ b/config/locales/idv/es.yml
@@ -34,7 +34,7 @@ es:
         estado.
       unsupported_jurisdiction_sp: Visita %{sp_name} para acceder a tu cuenta.
     form:
-      activate_by_mail: obtenga un código por carta.
+      activate_by_mail: obtener un código por correo electrónico en su lugar ›
       address1: Dirección de calle 1
       address2: Dirección de calle 2 (opcional)
       city: Ciudad
@@ -42,11 +42,10 @@ es:
       dob_hint: 'Ejemplo: 01/17/1964'
       first_name: Nombre
       last_name: Apellido
-      no_alternate_phone_html: Si no tiene otro número de teléfono, %{link}
+      no_alternate_phone_html: "¿Sin teléfono? No hay problema %{link}"
       password: Contraseña
       personal_details: Detalles personales
       phone: Teléfono
-      phone_label_aside: Celular o teléfono fijo
       previous_address_add: Añadir la dirección anterior
       previous_address_html: "¿Se mudó en los <strong>últimos 3 meses</ strong>?"
       ssn_label_html: Número de Seguro Social %{tooltip}
@@ -103,16 +102,13 @@ es:
       personal_key: Esta es su nueva clave personal. Escríbala y guárdela en un lugar
         seguro. La necesitará si pierde su contraseña.
       phone:
-        alert: Esta línea telefónica debe
-        in_your_name: a su nombre o el nombre de un miembro de familia
-        intro: Sólo podemos enviar el código de confirmación al número de teléfono
-          vinculado a su identidad legal.
+        alert: Este número de teléfono <strong>debe ser</strong>
         phone_of_record: Teléfono del registro
-        prepaid: no prepago
-        same_as_2fa: Este número de teléfono puede ser el mismo que utilizó para configurar
-          su contraseña de un uso único, siempre y cuando cumpla con los criterios
-          anteriores.
-        us_country_code: NOT TRANSLATED YET
+        rules:
+        - a su nombre o el nombre de un miembro de familia
+        - no es un teléfono virtual (como Google Voice o Skype)
+        - no es un número de teléfono prepago
+        - un número de EE. UU.
       return_to_profile: NOT TRANSLATED YET
       return_to_sp_html: NOT TRANSLATED YET
       review:
@@ -205,7 +201,7 @@ es:
       review: Revise y envíe
       select_verification: Active su cuenta
       session:
-        phone: Obtener un código por teléfono
+        phone: Ingresa un número de teléfono para ayudar a verificar tu identidad
         review: Encripte sus datos verificados ingresando su contraseña.
         success: Hemos verificado la información en su identificación emitida por
           el estado.
