LG-321 Support text for SAM.gov users
**Why**: Create support text for SAM users in the sign in/create account

**How**: Update locale files and sp session decorator

--- a/config/locales/service_providers/en.yml
+++ b/config/locales/service_providers/en.yml
@@ -17,3 +17,11 @@ en:
         using the same email address you use for USAJOBS.
       create_account_link: create a login.gov account
     learn_more: Learn more.
+    sam:
+      header: First time here from SAM?
+      account_page:
+        body: Your old SAM username and password won’t work. Please create a login.gov
+          account using the same email address you use for SAM.
+      body_html: Your old SAM username and password won’t work. Please %{link} using
+        the same email address you use for SAM.
+      create_account_link: create a login.gov account
