--- a/config/locales/service_providers/es.yml
+++ b/config/locales/service_providers/es.yml
@@ -19,3 +19,12 @@ es:
         de correo electrónico primaria o secundaria que usó para USAJOBS para %{link}.
       create_account_link: crear su nueva cuenta de login.gov
     learn_more: Obtenga más información.
+    sam:
+      header: "¿Ha venido de SAM?"
+      account_page:
+        body: Si tiene un perfil de SAM existente, favor de usar la dirección de correo
+          electrónico primaria o secundaria que usó para SAM para crear su nueva cuenta
+          de login.gov.
+      body_html: Si tiene un perfil de SAM existente, favor de usar la dirección de
+        correo electrónico primaria o secundaria que usó para SAM para %{link}.
+      create_account_link: crear su nueva cuenta de login.gov
