--- a/config/locales/service_providers/fr.yml
+++ b/config/locales/service_providers/fr.yml
@@ -19,3 +19,12 @@ fr:
         e-mail principale ou secondaire que vous avez utilisée pour USAJOBS pour %{link}.
       create_account_link: créer votre nouveau compte login.gov
     learn_more: En savoir plus.
+    sam:
+      header: Êtes-vous venu(e) de SAM?
+      account_page:
+        body: Si vous avez déjà un profil SAM, veuillez utiliser l'adresse e-mail
+          principale ou secondaire que vous avez utilisée pour SAM pour créer votre
+          nouveau compte login.gov.
+      body_html: Si vous avez déjà un profil SAM, veuillez utiliser l'adresse e-mail
+        principale ou secondaire que vous avez utilisée pour SAM pour %{link}.
+      create_account_link: créer votre nouveau compte login.gov
