--- a/config/locales/event_types/es.yml
+++ b/config/locales/event_types/es.yml
@@ -9,6 +9,7 @@ es:
     authenticator_enabled: App de autenticación permitido
     eastern_timestamp: "%{timestamp} (hora del Este)"
     email_changed: Email cambiado
+    new_personal_key: Clave personal cambiado
     password_changed: Contraseña cambiada
     phone_changed: Número de teléfono cambiado
     phone_confirmed: Teléfono confirmado
