--- a/config/locales/event_types/fr.yml
+++ b/config/locales/event_types/fr.yml
@@ -9,6 +9,7 @@ fr:
     authenticator_enabled: Application d'authentification activée
     eastern_timestamp: "%{timestamp} (Eastern)"
     email_changed: Adresse courriel modifiée
+    new_personal_key: Clé personnelle modifié
     password_changed: Mot de passe modifié
     phone_changed: Numéro de téléphone modifié
     phone_confirmed: Numéro de téléphone confirmé
