LG-322 PIV/CAC users must set up a phone number
**Why**: PIV/CAC users are required to configure a backup phone number
so that they can sign in/recover their account if they no longer have
access to their PIV/CAC card.

--- a/config/locales/forms/en.yml
+++ b/config/locales/forms/en.yml
@@ -1,6 +1,8 @@
 ---
 en:
   forms:
+    account_recovery_setup:
+      legend: Select a secondary authentication option
     buttons:
       back: Back
       continue: Continue
