--- a/config/locales/forms/fr.yml
+++ b/config/locales/forms/fr.yml
@@ -1,6 +1,8 @@
 ---
 fr:
   forms:
+    account_recovery_setup:
+      legend: NOT TRANSLATED YET
     buttons:
       back: Retour
       continue: Continuer
