--- a/config/locales/headings/en.yml
+++ b/config/locales/headings/en.yml
@@ -9,6 +9,8 @@ en:
       reactivate: Reactivate your account
       two_factor: Two-factor authentication
       verified_account: Verified Account
+    account_recovery_setup:
+      piv_cac_linked: Your PIV/CAC card is linked to your account
     confirmations:
       new: Send another confirmation email
     create_account_with_sp:
