--- a/config/locales/headings/es.yml
+++ b/config/locales/headings/es.yml
@@ -9,6 +9,8 @@ es:
       reactivate: Reactive su cuenta
       two_factor: Autenticación de dos factores
       verified_account: Cuenta verificada
+    account_recovery_setup:
+      piv_cac_linked: NOT TRANSLATED YET
     confirmations:
       new: Enviar otro email de confirmación
     create_account_with_sp:
