--- a/config/locales/headings/fr.yml
+++ b/config/locales/headings/fr.yml
@@ -9,6 +9,8 @@ fr:
       reactivate: Réactivez votre compte
       two_factor: Authentification à deux facteurs
       verified_account: Compte vérifié
+    account_recovery_setup:
+      piv_cac_linked: NOT TRANSLATED YET
     confirmations:
       new: Envoyer un autre courriel de confirmation
     create_account_with_sp:
