--- a/config/locales/titles/es.yml
+++ b/config/locales/titles/es.yml
@@ -3,6 +3,7 @@ es:
   titles:
     account: Cuenta
     account_locked: Cuenta bloqueada temporalmente
+    account_recovery_setup: NOT TRANSLATED YET
     confirmations:
       new: Reenviar instrucciones de confirmación de su cuenta
       show: Elija una contraseña
