--- a/config/locales/headings/en.yml
+++ b/config/locales/headings/en.yml
@@ -19,6 +19,7 @@ en:
       email: Change your email
       password: Change your password
       phone: Enter your new phone number
+    lock_failure: Here's what you can do
     passwords:
       change: Change your password
       confirm: Confirm your current password to continue
