--- a/config/locales/idv/es.yml
+++ b/config/locales/idv/es.yml
@@ -79,15 +79,16 @@ es:
       help_center_html: Visite nuestro <strong>Centro de Ayuda</strong> para obtener
         más información sobre la verificación de su cuenta.
       jurisdiction:
-        no_id: Estamos trabajando arduamente para agregar más formas de verificar
+        no_id: No tengo una identificación emitida por el estado
+        no_id_failure: Estamos trabajando arduamente para agregar más formas de verificar
           su identidad.
         profile: Para acceder a su cuenta en el futuro, puede %{link}.
         profile_link: mira tu cuenta aquí
         sp_support: Visita %{link} para obtener más información.
         try_again: "¿Cometer un error? Puedes %{link}."
         try_again_link: intentarlo de nuevo
-        unsupported_jurisdiction: Estamos trabajando duro para agregar más estados
-          y esperamos apoyar a %{state} pronto.
+        unsupported_jurisdiction_failure: Estamos trabajando duro para agregar más
+          estados y esperamos apoyar a %{state} pronto.
         why: Para verificar su identidad, necesitará información de su identificación
           emitida por el estado.
         where: "¿Dónde se emitió su licencia de conducir, permiso de conducir o identificación
